--- a/assets/style.css
+++ b/assets/style.css
@@ -4,250 +4,120 @@ body{
     background-color: black;
 }
 
-
-/* Header: basic styling for header*/
-.header{
-    padding: 0px 40px;
-    display: flex;
-    flex-direction: row;
-    background-color: #0e0b14;
-    z-index: 9999;
-}
-/* Header: nav flex*/
-.header nav{
-    display: flex;
-}
-/* Header logo */
-.header h1{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.8em;
-    font-weight: 700;
-    z-index: 3;
-}
-/* Header: ul flex, and styling*/
-.header ul{
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-    
-}
-/* menu styling  a selector is for menu items self*/
-.header li{
-    margin-left: 3em;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
-    font-weight: 500;
-    text-decoration: none;
-    
-}
-.header nav > ul  a{
-    font-size: 1em;
-    font-weight: 500;
-    text-decoration: none;
-    color: white;
-    letter-spacing: 0.1em;
-}
-    /* hover a element */
-    .header a:hover{
-        text-decoration: underline 2px white;
-        text-underline-offset: 0.4em;
-        transition: step-end;
-    }
-/* profile button */
-.header article{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.header  button{
-    position: absolute;
-    right: 40px;
-    width: 4em;
-    height: 4em;
-    border-radius: 100%;
-    border: none;
-    z-index: 99;
-    background-color: #0e0b14;
-}
-.header button> img{
-    width: 4em;
-    height: 4em;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    border-radius: 100%;
-
-}
-/* Header button before text */
-.header button::before{
-    content: "Tom Deeterink";
-    color: white;
-    position: absolute;
-    margin-left: -120px;
-    margin-top: -8px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 70px;
-}
-
-.header button:hover{
-    cursor: pointer;
-}
-.container{
-    position: absolute;
-    right: 2px;
-    background-color: #0e0b14;
-    display: flex;
-    height: 70px;
-    width: 220px;
-    top: 1px;
-    position: absolute;
-    background-color: #0e0b14;
-    flex-direction: column;
-    justify-content: center;
-    z-index: 2;
-}
-
-/* hover  menu for users */
-
-
-/* when button is NOT clicked, menu is NOT visible */
-.hidden{
-    visibility: hidden;
-    width: 12.5em;
-    height: max-content;
-    z-index: 0;
-    position: absolute;
-    background-color: #0e0b14;
-    right: 0px;
-    padding: 1em;
-    margin-top: -620px;
-    top: 0;
-    border-radius: 0px 12px 12px 0px;
-    transition: ease-out 0.5s;
-    overflow: hidden;
-}
-
-/* when button is clicked, menu is visible */
-.visible{
-   visibility: visible;
-   height: max-content;
-   z-index: 1 !important;
-   margin-top: 0px;
-   transition: ease-in 0.2s;
-   border: 1px solid #17151b;
-}
-/* devider between profile and other users */
-.devider{
-    border-bottom: 1px solid #17151b;
-    position: absolute;
-    top: 6em;
-    width: 75%;
-    margin-top: -1em;
-    
-}
-.hidden ul{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    color: white;
-    padding-inline-start: 0px;
-    margin-top: 4em;
-    overflow: visible ;
-}
-
-.hidden li{
-    margin-left: 0;
-}
-
-.header article > .hidden{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    border-radius: 12px 0px 0px 12px;
-}
-/* users profile card */
-.users li{
-    padding: 16px 0em;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 170px ;
-    font-weight: 400;
-    transform: scale(100%);
-    transition: ease-out 0.3s;
-
-}
-.users li>img{
-        position: relative;
-        width: 3.5em;
-        height: 3.5em;
-        border-radius: 100%;
-        margin-right: 10px;
-        margin-bottom: -14px;
-}
-.users li:hover{
-    transform: scale(110%);
-    transition: ease-in 0.2s;
-    cursor: pointer;
-}
-
-/* different user hover (link), makes it light up */
-.users li a{
-    color: rgb(208, 204, 204);
-    transition: ease-out 0.3s;
-    text-decoration: none;
-    font-size: 1em !important;
-}
-.users li> a:hover{
-    color: white;
-    transition: ease-in 0.2s;
-    text-decoration: none;
-}
-.header .mobile{
-    display: none;
-}
-
-/* Header nav mobile */
-@media screen and (max-width: 420px){
+/* full header css */
+    /* Header: basic styling for header*/
     .header{
-        padding: 0px 16px;
-    }
-    .header button{
-        right: 16px;
-    }
-    .header button::before{
-        display: none;
-    }
-    .header  .mobile{
-        display: block;
+        padding: 0px 40px;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        flex-direction: row;
+        background-color: #0e0b14;
+        z-index: 9999;
+    }
+    /* Header: nav flex*/
+    .header nav{
+        display: flex;
+        background-color: #0e0b14;
+    }
+    /* Header logo */
+    .header h1{
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.8em;
+        font-weight: 700;
         z-index: 3;
     }
-    .mobile li{
-        margin-inline-start: 1em;
+    /* Header: ul flex, and styling*/
+    .header ul{
+        display: flex;
+        align-items: center;
+        list-style-type: none;
+        
     }
-    .mobile ul{
-        padding-inline-start: 0px;
+    /* menu styling  a selector is for menu items self*/
+    .header li{
+        margin-left: 3em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1em;
+        font-weight: 500;
+        text-decoration: none;
+        
     }
-    .header nav{
-        display: none;
+    .header nav > ul  a{
+        font-size: 1em;
+        font-weight: 500;
+        text-decoration: none;
+        color: white;
+        letter-spacing: 0.1em;
+    }
+        /* hover a element */
+        .header a:hover{
+            text-decoration: underline 2px white;
+            text-underline-offset: 0.4em;
+            transition: step-end;
+        }
+    /* profile button */
+    .header article{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .header  button{
+        position: absolute;
+        right: 40px;
+        width: 4em;
+        height: 4em;
+        border-radius: 100%;
+        border: none;
+        z-index: 99;
+        background-color: #0e0b14;
+    }
+    .header button> img{
+        width: 4em;
+        height: 4em;
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        border-radius: 100%;
+
+    }
+    /* Header button before text */
+    .header button::before{
+        content: "Tom Deeterink";
+        color: white;
+        position: absolute;
+        margin-left: -120px;
+        margin-top: -8px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 70px;
+    }
+
+    .header button:hover{
+        cursor: pointer;
     }
     .header .container{
-
+        position: absolute;
+        right: 2px;
+        background-color: #0e0b14;
+        display: flex;
+        height: 70px;
+        width: 220px;
+        top: 1px;
+        position: absolute;
+        background-color: #0e0b14;
+        flex-direction: column;
+        justify-content: center;
+        z-index: 2;
     }
-}
-/* User nav mobile  */
 
-@media screen and (max-width: 420px){
-        /* when button is NOT clicked, menu is NOT visible */
+    /* hover  menu for users */
+
+
+    /* when button is NOT clicked, menu is NOT visible */
     .hidden{
         visibility: hidden;
-        width: 12em;
+        width: 12.5em;
         height: max-content;
         z-index: 0;
         position: absolute;
@@ -270,4 +140,203 @@ body{
     transition: ease-in 0.2s;
     border: 1px solid #17151b;
     }
+    /* devider between profile and other users */
+    .devider{
+        border-bottom: 1px solid #17151b;
+        position: absolute;
+        top: 6em;
+        width: 75%;
+        margin-top: -1em;
+        
+    }
+    .hidden ul{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        color: white;
+        padding-inline-start: 0px;
+        margin-top: 4em;
+        overflow: visible ;
+    }
+
+    .hidden li{
+        margin-left: 0;
+    }
+
+    .header article > .hidden{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        border-radius: 12px 0px 0px 12px;
+    }
+    /* users profile card */
+    .users li{
+        padding: 16px 0em;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 170px ;
+        font-weight: 400;
+        transform: scale(100%);
+        transition: ease-out 0.3s;
+
+    }
+    .users li>img{
+            position: relative;
+            width: 3.5em;
+            height: 3.5em;
+            border-radius: 100%;
+            margin-right: 10px;
+            margin-bottom: -14px;
+    }
+    .users li:hover{
+        transform: scale(110%);
+        transition: ease-in 0.2s;
+        cursor: pointer;
+    }
+
+    /* different user hover (link), makes it light up */
+    .users li a{
+        color: rgb(208, 204, 204);
+        transition: ease-out 0.3s;
+        text-decoration: none;
+        font-size: 1em !important;
+    }
+    .users li> a:hover{
+        color: white;
+        transition: ease-in 0.2s;
+        text-decoration: none;
+    }
+    .header .mobile{
+        display: none;
+    }
+
+    /* Header nav mobile */
+    @media screen and (max-width: 420px){
+        .header{
+            padding: 0px 16px;
+        }
+        .header button{
+            right: 16px;
+        }
+        .header button::before{
+            display: none;
+        }
+        .header  .mobile{
+            display: block;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            z-index: 3;
+        }
+        .mobile li{
+            margin-inline-start: 1em;
+        }
+        .mobile ul{
+            padding-inline-start: 0px;
+        }
+        .header nav{
+            display: none;
+        }
+        
+    }
+    /* User nav mobile  */
+
+    @media screen and (max-width: 420px){
+            /* when button is NOT clicked, menu is NOT visible */
+        .hidden{
+            visibility: hidden;
+            width: 12em;
+            height: max-content;
+            z-index: 0;
+            position: absolute;
+            background-color: #0e0b14;
+            right: 0px;
+            padding: 1em;
+            margin-top: -620px;
+            top: 0;
+            border-radius: 0px 12px 12px 0px;
+            transition: ease-out 0.5s;
+            overflow: hidden;
+        }
+
+        /* when button is clicked, menu is visible */
+        .visible{
+        visibility: visible;
+        height: max-content;
+        z-index: 1 !important;
+        margin-top: 0px;
+        transition: ease-in 0.2s;
+        border: 1px solid #17151b;
+        }
+    }
+
+    /* full menu tablet */
+    @media screen and (min-width:420px) and (max-width: 1000px){
+            .header{
+                padding: 0px 16px;
+            }
+            .header nav{
+                display: none;
+            }
+            .header  .mobile{
+                display: block;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                z-index: 3;
+            }
+            .mobile li{
+                margin-inline-start: 1em;
+            }
+            .mobile ul{
+                padding-inline-start: 0px;
+            }
+            .container{
+                position: absolute;
+            }
+        }
+
+        /* when button is clicked, menu is visible */
+        .visible{
+        visibility: visible;
+        height: max-content;
+        z-index: 1 !important;
+        margin-top: 0px;
+        transition: ease-in 0.2s;
+        border: 1px solid #17151b;
+        }
+    
+/* end of full header css */
+
+/* home first section css */ 
+.sc1home{
+    display: flex;
+    flex-wrap: wrap;
+    height: max-content;
+    width: inherit;
+    padding: 100px 40px;
+    align-items: center;
+    justify-content: center;
+
+ }
+ .chevronback , .chevronnext{
+    position: absolute;
+ }
+.chevronnext{
+    float: right;
+}
+.chevronback{
+    float: left;
+    
+}
+.sc1home .container{
+    width: 1200px;
+    height: 400px;
+    border-radius: 1em;
+    background-color: black;
+    margin-left: 32px;
+    margin-right: 32px;
+    display: grid;
+    box-shadow: 0px 0px 30px rgb(44, 24, 135);
 }
