--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: #0e0b14;
 }
 
 /* full header css */
@@ -12,11 +12,14 @@ body{
         flex-direction: row;
         background-color: #0e0b14;
         z-index: 9999;
+        width: 100%;
     }
     /* Header: nav flex*/
     .header nav{
         display: flex;
         background-color: #0e0b14;
+        
+        
     }
     /* Header logo */
     .header h1{
@@ -25,6 +28,7 @@ body{
         font-size: 1.8em;
         font-weight: 700;
         z-index: 3;
+        background-color: #0e0b14;
     }
     /* Header: ul flex, and styling*/
     .header ul{
@@ -215,6 +219,7 @@ body{
     @media screen and (max-width: 420px){
         .header{
             padding: 0px 16px;
+           width: 100%;
         }
         .header button{
             right: 16px;
@@ -275,6 +280,7 @@ body{
     @media screen and (min-width:420px) and (max-width: 1000px){
             .header{
                 padding: 0px 16px;
+                background-color: inherit;
             }
             .header nav{
                 display: none;
@@ -292,8 +298,8 @@ body{
             .mobile ul{
                 padding-inline-start: 0px;
             }
-            .container{
-                position: absolute;
+            .header .container{
+                
             }
         }
 
@@ -311,6 +317,7 @@ body{
 
 /* home first section css */ 
 .sc1home{
+    overflow: visible;
     display: flex;
     flex-wrap: wrap;
     height: max-content;
@@ -320,16 +327,32 @@ body{
     justify-content: center;
 
  }
- .chevronback , .chevronnext{
-    position: absolute;
+/* chevrons styling */
+ .chevron{
+    padding: 0.8em 1em;
+    border-radius: 100%;
+    border: none;
+    z-index: 99;
  }
-.chevronnext{
-    float: right;
-}
-.chevronback{
-    float: left;
-    
-}
+ .chevron span{
+    margin-left: -2px;
+ }
+.chevron:hover{
+    background: white;
+    transition: ease-in 0.2s;
+    cursor: pointer;
+    transform: scale(90%);
+    box-shadow: 1px 1px 10px rgb(68, 31, 233);
+ }
+ /* chevrons positioning */
+ .back{
+    margin-left: -5em;
+ }
+ .next{
+    margin-right: -5em;
+ }
+
+ /* main container (holder item) */
 .sc1home .container{
     width: 1200px;
     height: 400px;
@@ -337,6 +360,137 @@ body{
     background-color: black;
     margin-left: 32px;
     margin-right: 32px;
-    display: grid;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 0px 30px rgb(44, 24, 135);
+    row-gap: 24px;
+    overflow: visible;
+    
+}
+.sc1home > .container > .big-header:hover{
+    transform: scale(102%);
+    transition: ease-in 0.5s;
     box-shadow: 0px 0px 30px rgb(44, 24, 135);
 }
+
+/* full acrticle */
+.sc1home .big-header{
+    width: 1200px;
+    height: 400px;
+    border-radius: 1em;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 24px;
+    transform: translatex(0px);
+    transform: scale(100%);
+    transition: ease-in 0.4s;
+}
+.big-header .header-series{
+    width: 1200px;
+    height: 400px;
+    border-radius: 1em;
+    position: absolute;
+}
+
+.content img{
+    z-index: 0;
+    width: 100%;
+    height: 400px;
+    border-radius: 1em; 
+}
+.content h1{
+    position: absolute;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 4em;
+    bottom: 32px ;
+    margin: 0;
+    left: 32px;
+}
+
+.active{
+    transition: ease-in 1s;
+   z-index: 3;
+}
+
+/* mobile */
+     /* main container (holder item) */
+     @media screen and (max-width: 420px) {
+        .sc1home{
+            padding:  16px;
+            margin-top: 50px;
+        }
+        .sc1home .container{
+            width: 300px;
+            height: 200px;
+            border-radius: 0.5em;
+            background-color: black;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0px 0px 30px rgb(44, 24, 135);
+            row-gap: 24px;
+            
+        }
+        /* full acrticle */
+        .sc1home .big-header{
+            width: 300px;
+            height: 200px;
+            border-radius: 0.5em;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: center;
+            column-gap: 24px;
+            transform: translatex(0px);
+            transform: scale(100%);
+            transition: ease-in 0.4s;
+        }
+        .big-header .header-series{
+            width: 200px;
+            height: 200px;
+            border-radius: 1em;
+            position: absolute;
+        }
+        /* chevron styling */
+        .chevron{
+            padding: 0.8em 1em;
+            border-radius: 100%;
+            border: none;
+            z-index: 99;
+            position: absolute;
+            margin-top: 300px;
+            left: 50%;
+        
+            
+         }
+        .chevron:hover{
+            background: white;
+            transition: ease-in 0.2s;
+            cursor: pointer;
+            transform: scale(90%);
+            box-shadow: 1px 1px 10px rgb(68, 31, 233);
+         }
+         /* chevrons positioning */
+         .back{
+            margin-left:  -4em;
+         }
+         .next{
+            margin-right: -2em;
+         }
+        
+         /* image styling */
+         .content img{
+            z-index: 0;
+            width: 300px;
+            height: 200px;
+            border-radius: 1em; 
+        }
+        .content h1{
+            font-size: 2em;
+        }
+     }
+    
